--- a/webpageplan.html
+++ b/webpageplan.html
@@ -42,11 +42,11 @@
                 figure and can be seen immediately without searching. The other <br>
                 features would only be utilized if necessary.</p>
         <h3>Mobile Screen</h3>
-       <img src="Small Screen.png" alt="Mobile Screen" style="width:155px;height:270px;">
+       <img src="Small Screen.PNG" alt="Mobile Screen">
         <br>
         <h3>Tablet Screen</h3>
-        <img src="Medium Screen.png" alt="Tablet Screen" style="width:480px;height:270px;">
+        <img src="Medium Screen.PNG" alt="Tablet Screen">
         <h3>Desktop/Laptop Screen</h3>
-        <img src="Large Screen.png" alt="Tablet Screen" style="width:960px;height:540px;">
+        <img src="Large Screen.PNG" alt="Desktop Screen">
     </body>
 </html>
