peer review added

--- a/webpageplan.html
+++ b/webpageplan.html
@@ -48,5 +48,7 @@
         <img src="Medium Screen.PNG" alt="Tablet Screen" style="width:480px;height:270px;">
         <h3>Desktop/Laptop Screen</h3>
         <img src="Large Screen.PNG" alt="Desktop Screen" style="width:960px;height:540px;">
+        <h3>Peer Review</h3>
+        <p>Steven Chamberlin</p>
     </body>
 </html>
