Semantic stuff added

--- a/webpageplan.html
+++ b/webpageplan.html
@@ -6,6 +6,8 @@
         
     </head>
     <body>
+        <nav> <a href="https://DanielSouthwick.github.io/">Home</a>
+        </nav>
         <header>
             <h1>DanielSouthwick.io</h1>
             <h2>Purpose Statement</h2>
@@ -22,7 +24,9 @@
                 and convenient decisions regarding the weather where <br>
                 they reside. To do this we make our services available <br>
                 on tablets and mobile devices.</p>
-            <h3>Example Persona</h3>
+        </header>    
+        <main>    
+        <h3>Example Persona</h3>
             <img src="Persona.png" alt="Hiker">
             <h3>James Pickford - 27</h3>
                 <ul>
@@ -36,7 +40,7 @@
                     <li>Doesn't want to lose family time</li>
                     <li>Relies on his phone for a large part of his research</li>
                 </ul>
-        </header>
+        
         <h2>Wire Frames/Designs</h2>
             <p>These designs focus on the current temperature as the most important<br>         
                 figure and can be seen immediately without searching. The other <br>
@@ -48,7 +52,10 @@
         <img src="Medium Screen.PNG" alt="Tablet Screen" style="width:480px;height:270px;">
         <h3>Desktop/Laptop Screen</h3>
         <img src="Large Screen.PNG" alt="Desktop Screen" style="width:960px;height:540px;">
-        <h3>Peer Review</h3>
+        </main>
+        <footer>
+            <h3>Peer Review</h3>
         <p>Steven Chamberlin</p>
+        </footer>
     </body>
 </html>
