--- a/webpageplan.html
+++ b/webpageplan.html
@@ -55,7 +55,9 @@
         </main>
         <footer>
             <h3>Peer Review</h3>
-        <p>Steven Chamberlin</p>
+        <p>Steven Chamberlin - I do like the header on the browser where it shows<br>
+            the current weather. Thought of including that myself.This looks pretty<br>
+            good. Not much I'd change here.</p>
         </footer>
     </body>
 </html>
