--- a/Webpage Planning.html
+++ b/Webpage Planning.html
@@ -43,11 +43,11 @@
                 searching. The other features would only be utilized if <br>
                 necessary.</p>
         <h3>Mobile Screen</h3>
-       <img src="Small Screen.png" alt="Mobile Screen" style="width:155px;height:270px;">
+       <img src="Small Screen.PNG" alt="Mobile Screen" style="width:155px;height:270px;">
         <br>
         <h3>Tablet Screen</h3>
-        <img src="Medium Screen.png" alt="Tablet Screen" style="width:480px;height:270px;">
+        <img src="Medium Screen.PNG" alt="Tablet Screen" style="width:480px;height:270px;">
         <h3>Desktop/Laptop Screen</h3>
-        <img src="Large Screen.png" alt="Tablet Screen" style="width:960px;height:540px;">
+        <img src="Large Screen.PNG" alt="Tablet Screen" style="width:960px;height:540px;">
     </body>
 </html>
