--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="AppliedScipture.html">Applied Scripture</a>
     <br>
             <li>CIT-230</li>
-            <a href="Webpage Planning.html">Weather Webpage Plan</a>
+            <a href="webpageplan.html">Weather Webpage Plan</a>
     <br>
             <a href="Star%20Weather%20Mobile.html">Weather Webpage for Mobile</a>
     <br>
