--- a/SWMexample2.html
+++ b/SWMexample2.html
@@ -2,19 +2,20 @@
 <html lang="en-us">
 
 <head>
-    <title>Star Weather | Mobile</title>
+    <title>Southwick Weather | Mobile</title>
     <meta charset="UTF-8">
     <link type="text/css" rel="stylesheet" href="normalize.css">
     <link type="text/css" rel="stylesheet" href="mystyles2.css">
 </head>
+
 <body>
     <header>
-        <h1><font color="azure">Star Weather</font></h1>
+        <font color="azure">S O U T H W I C K  -  W E A T H E R</font>
     </header>
     <nav>
         <a href="#">Franklin</a>
         <a href="#">Greenville</a>
-        <a href="#">Louiston</a>
+        <a href="#">Springfield</a>
     </nav>
     <section id="tempblk1">
         <ul>
@@ -37,29 +38,47 @@
     </section>
     <main>
         <section>
-            <div>
-                <h3>Hourly Forecast</h3></div>
+            <div id="hfblk">
+                <p id="hf">HOURLY FORECAST</p>
+                <p id="hfdate">FEBRUARY 14, 2017</p>
+            </div>
             <div id="hfdata">
                 <ul>
-            <li>23&deg;<br>1PM</li>
-            <li>27&deg;<br>2PM</li>
-            <li>30&deg;<br>3PM</li>
-            <li>33&deg;<br>4PM</li>
+                    <li>23&deg;
+                        <br>1PM</li>
+                    <li>27&deg;
+                        <br>2PM</li>
+                    <li>30&deg;
+                        <br>3PM</li>
+                    <li>33&deg;
+                        <br>4PM</li>
                 </ul>
-                    </div>
+            </div>
         </section>
         <section>
-            <div>
-                <h3>Weekly Forecast</h3></div>
+            <div id="wfblk">
+                <p id="wf">WEEKLY FORECAST</p>
+                <p id="wfdate">FEBRUARY 11-18, 2017</p>
+            </div>
+
             <div id="wfdata">
                 <ul>
-            <li>21&deg; hi<br>6&deg; lo<br>MON</li>
-            <li>25&deg; hi<br>3&deg; lo<br>TUES</li>
-            <li>32&deg; hi<br>11&deg; lo<br>WED</li>
-            <li>30&deg; hi<br>13&deg; lo<br>THUR</li>
+                    <li>21&deg; hi
+                        <br>6&deg; lo
+                        <br>MON</li>
+                    <li>25&deg; hi
+                        <br>3&deg; lo
+                        <br>TUES</li>
+                    <li>32&deg; hi
+                        <br>11&deg; lo
+                        <br>WED</li>
+                    <li>30&deg; hi
+                        <br>13&deg; lo
+                        <br>THUR</li>
                 </ul>
-                    </div>        
+            </div>
         </section>
     </main>
 </body>
+
 </html>
