--- a/SWMexample2.html
+++ b/SWMexample2.html
@@ -42,8 +42,32 @@
                 <p id="hf">HOURLY FORECAST</p>
                 <p id="hfdate">FEBRUARY 14, 2017</p>
             </div>
-            <div id="hfdata">
+            <div class="scrollmenu">
                 <ul>
+                    <li>2&deg;
+                        <br>1AM</li>
+                    <li>2&deg;
+                        <br>2AM</li>
+                    <li>3&deg;
+                        <br>3AM</li>
+                    <li>4&deg;
+                        <br>4AM</li>
+                    <li>6&deg;
+                        <br>5AM</li>
+                    <li>7&deg;
+                        <br>6AM</li>
+                    <li>10&deg;
+                        <br>7AM</li>
+                    <li>13&deg;
+                        <br>8AM</li>
+                    <li>14&deg;
+                        <br>9AM</li>
+                    <li>16&deg;
+                        <br>10AM</li>
+                    <li>18&deg;
+                        <br>11AM</li>
+                    <li>20&deg;
+                        <br>12PM</li>
                     <li>23&deg;
                         <br>1PM</li>
                     <li>27&deg;
@@ -52,6 +76,22 @@
                         <br>3PM</li>
                     <li>33&deg;
                         <br>4PM</li>
+                    <li>34&deg;
+                        <br>5PM</li>
+                    <li>31&deg;
+                        <br>6PM</li>
+                    <li>27&deg;
+                        <br>7PM</li>
+                    <li>23&deg;
+                        <br>8PM</li>
+                    <li>18&deg;
+                        <br>9PM</li>
+                    <li>12&deg;
+                        <br>10PM</li>
+                    <li>6&deg;
+                        <br>11PM</li>
+                    <li>3&deg;
+                        <br>12PM</li>
                 </ul>
             </div>
         </section>
@@ -61,7 +101,7 @@
                 <p id="wfdate">FEBRUARY 11-18, 2017</p>
             </div>
 
-            <div id="wfdata">
+            <div class="scrollmenu">
                 <ul>
                     <li>21&deg; hi
                         <br>6&deg; lo
@@ -72,13 +112,27 @@
                     <li>32&deg; hi
                         <br>11&deg; lo
                         <br>WED</li>
-                    <li>30&deg; hi
+                    <li>34&deg; hi
                         <br>13&deg; lo
                         <br>THUR</li>
+                    <li>30&deg; hi
+                        <br>11&deg; lo
+                        <br>FRI</li>
+                    <li>27&deg; hi
+                        <br>10&deg; lo
+                        <br>SAT</li>
+                    <li>22&deg; hi
+                        <br>6&deg; lo
+                        <br>SUN</li>
                 </ul>
             </div>
         </section>
     </main>
+    <footer>
+        <a href="Small%20Screen.PNG">Mobile Site Plan</a>
+        <a href="index.html">Home</a>
+        <a href="#">Settings</a>
+    </footer>
 </body>
 
 </html>
