--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     <br>
             <a href="AppliedScipture.html">Applied Scripture</a>
     <br>
+    <br>
+            
             <li>CIT-230</li>
             <a href="webpageplan.html">Weather Webpage Plan</a>
     <br>
-            <a href="Star%20Weather%20Mobile.html">Weather Webpage for Mobile</a>
-    <br>
-            <a href="SWMexample2.html">Star Weather Mobile</a>
+            <a href="SWMexample2.html">Southwick Weather - Mobile Demo</a>
             <li>New Testament</li>
         </ul>
     </nav>
