--- a/SWMexample2.html
+++ b/SWMexample2.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
 <head>
-    <title>Southwick Weather | Mobile</title>
     <meta charset="UTF-8">
+    <title>Southwick Weather | Mobile</title>
     <link type="text/css" rel="stylesheet" href="normalize.css">
     <link type="text/css" rel="stylesheet" href="mystyles2.css">
 </head>
-
 <body>
     <header>
-        <font color="azure">SOUTHWICK  -  WEATHER</font>
+        <h1>SOUTHWICK - WEATHER</h1>
     </header>
     <nav>
         <a href="#">Franklin</a>
@@ -29,11 +27,11 @@
     </section>
     <section>
         <div id="windblk">
-            <dl>
-                <dt>Wind Speed: 6mph</dt>
-                <dt>Precipitation: 60%</dt>
-                <dt>Wind Chill: -4&deg;</dt>
-            </dl>
+            <ul>
+                <li>Wind Speed: 6mph</li>
+                <li>Precipitation: 60%</li>
+                <li>Wind Chill: -4&deg;</li>
+            </ul>
         </div>
     </section>
     <main>
