--- a/SWMexample2.html
+++ b/SWMexample2.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
-    <meta charset="UTF-8">
     <title>Southwick Weather | Mobile</title>
     <link type="text/css" rel="stylesheet" href="normalize.css">
     <link type="text/css" rel="stylesheet" href="mystyles2.css">
 </head>
+
 <body>
     <header>
         <h1>SOUTHWICK - WEATHER</h1>
@@ -15,116 +16,111 @@
         <a href="#">Greenville</a>
         <a href="#">Springfield</a>
     </nav>
-    <section id="tempblk1">
+    <div id="tempblk1">
         <ul>
             <li>4:45pm</li>
             <li>Franklin, ID</li>
         </ul>
-    </section>
-    <section>
-        <div id="tempblk2">Partly Cloudy &#9925;</div>
-        <div id="tempblk3">35&deg;</div>
-    </section>
-    <section>
-        <div id="windblk">
+    </div>
+    <div id="tempblk2">Partly Cloudy &#9925;</div>
+    <div id="tempblk3">35&deg;</div>
+    <div id="windblk">
+        <dl>
+            <dt>Wind Speed: 6mph</dt>
+            <dd></dd>
+            <dt>Precipitation: 60%</dt>
+            <dd></dd>
+            <dt>Wind Chill: -4&deg;</dt>
+            <dd></dd>
+        </dl>
+    </div>
+    <main>
+        <div id="hfblk">
+            <p id="hf">HOURLY FORECAST</p>
+            <p id="hfdate">FEBRUARY 14, 2017</p>
+        </div>
+        <div class="scrollmenu">
             <ul>
-                <li>Wind Speed: 6mph</li>
-                <li>Precipitation: 60%</li>
-                <li>Wind Chill: -4&deg;</li>
+                <li>2&deg;
+                    <br>1AM</li>
+                <li>2&deg;
+                    <br>2AM</li>
+                <li>3&deg;
+                    <br>3AM</li>
+                <li>4&deg;
+                    <br>4AM</li>
+                <li>6&deg;
+                    <br>5AM</li>
+                <li>7&deg;
+                    <br>6AM</li>
+                <li>10&deg;
+                    <br>7AM</li>
+                <li>13&deg;
+                    <br>8AM</li>
+                <li>14&deg;
+                    <br>9AM</li>
+                <li>16&deg;
+                    <br>10AM</li>
+                <li>18&deg;
+                    <br>11AM</li>
+                <li>20&deg;
+                    <br>12PM</li>
+                <li>23&deg;
+                    <br>1PM</li>
+                <li>27&deg;
+                    <br>2PM</li>
+                <li>30&deg;
+                    <br>3PM</li>
+                <li>33&deg;
+                    <br>4PM</li>
+                <li>34&deg;
+                    <br>5PM</li>
+                <li>31&deg;
+                    <br>6PM</li>
+                <li>27&deg;
+                    <br>7PM</li>
+                <li>23&deg;
+                    <br>8PM</li>
+                <li>18&deg;
+                    <br>9PM</li>
+                <li>12&deg;
+                    <br>10PM</li>
+                <li>6&deg;
+                    <br>11PM</li>
+                <li>3&deg;
+                    <br>12PM</li>
             </ul>
         </div>
-    </section>
-    <main>
-        <section>
-            <div id="hfblk">
-                <p id="hf">HOURLY FORECAST</p>
-                <p id="hfdate">FEBRUARY 14, 2017</p>
-            </div>
-            <div class="scrollmenu">
-                <ul>
-                    <li>2&deg;
-                        <br>1AM</li>
-                    <li>2&deg;
-                        <br>2AM</li>
-                    <li>3&deg;
-                        <br>3AM</li>
-                    <li>4&deg;
-                        <br>4AM</li>
-                    <li>6&deg;
-                        <br>5AM</li>
-                    <li>7&deg;
-                        <br>6AM</li>
-                    <li>10&deg;
-                        <br>7AM</li>
-                    <li>13&deg;
-                        <br>8AM</li>
-                    <li>14&deg;
-                        <br>9AM</li>
-                    <li>16&deg;
-                        <br>10AM</li>
-                    <li>18&deg;
-                        <br>11AM</li>
-                    <li>20&deg;
-                        <br>12PM</li>
-                    <li>23&deg;
-                        <br>1PM</li>
-                    <li>27&deg;
-                        <br>2PM</li>
-                    <li>30&deg;
-                        <br>3PM</li>
-                    <li>33&deg;
-                        <br>4PM</li>
-                    <li>34&deg;
-                        <br>5PM</li>
-                    <li>31&deg;
-                        <br>6PM</li>
-                    <li>27&deg;
-                        <br>7PM</li>
-                    <li>23&deg;
-                        <br>8PM</li>
-                    <li>18&deg;
-                        <br>9PM</li>
-                    <li>12&deg;
-                        <br>10PM</li>
-                    <li>6&deg;
-                        <br>11PM</li>
-                    <li>3&deg;
-                        <br>12PM</li>
-                </ul>
-            </div>
-        </section>
-        <section>
-            <div id="wfblk">
-                <p id="wf">WEEKLY FORECAST</p>
-                <p id="wfdate">FEBRUARY 11-18, 2017</p>
-            </div>
+        <div id="wfblk">
+            <p id="wf">WEEKLY FORECAST</p>
+            <p id="wfdate">FEBRUARY 11-18, 2017</p>
+        </div>
 
-            <div class="scrollmenu">
-                <ul>
-                    <li>21&deg; hi
-                        <br>6&deg; lo
-                        <br>MON</li>
-                    <li>25&deg; hi
-                        <br>3&deg; lo
-                        <br>TUES</li>
-                    <li>32&deg; hi
-                        <br>11&deg; lo
-                        <br>WED</li>
-                    <li>34&deg; hi
-                        <br>13&deg; lo
-                        <br>THUR</li>
-                    <li>30&deg; hi
-                        <br>11&deg; lo
-                        <br>FRI</li>
-                    <li>27&deg; hi
-                        <br>10&deg; lo
-                        <br>SAT</li>
-                    <li>22&deg; hi
-                        <br>6&deg; lo
-                        <br>SUN</li>
-                </ul>
-            </div>
-        </section>
+        <div class="scrollmenu">
+            <ul>
+                <li>21&deg; hi
+                    <br>6&deg; lo
+                    <br>MON</li>
+                <li>25&deg; hi
+                    <br>3&deg; lo
+                    <br>TUES</li>
+                <li>32&deg; hi
+                    <br>11&deg; lo
+                    <br>WED</li>
+                <li>34&deg; hi
+                    <br>13&deg; lo
+                    <br>THUR</li>
+                <li>30&deg; hi
+                    <br>11&deg; lo
+                    <br>FRI</li>
+                <li>27&deg; hi
+                    <br>10&deg; lo
+                    <br>SAT</li>
+                <li>22&deg; hi
+                    <br>6&deg; lo
+                    <br>SUN</li>
+            </ul>
+        </div>
     </main>
     <footer>
         <a href="Small%20Screen.PNG">Mobile Site Plan</a>
