--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <title>Home Page</title>
     <meta name="viewpoint" content="width=device-width">
-
+    <link type="text/css" rel="stylesheet" href="normalize.css">
+    <link type="text/css" rel="stylesheet" href="mystyles.css">
 </head>
 
 <body>
     <header>
         <h1>HOME PAGE for GITHUB</h1>
-        
         <h2>Daniel Southwick</h2>
     </header>
     <nav>
@@ -32,7 +32,7 @@
             <li>CIT-230</li>
             <a href="webpageplan.html">Weather Webpage Plan</a>
     <br>
-            <a href="SWMexample2.html">Southwick Weather - Mobile Demo</a>
+            <a href="SWMexample2.html">Franklin Weather Page</a>
   <br>
         </ul>
     </nav>
