--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <body>
     <header>
-        <h1>HOME PAGE for GITHUB</h1>
-        <h2>Daniel Southwick</h2>
+        <h1>DanielSouthwick.
+            gitbhub.io</h1>
+        <h2>by Daniel Southwick</h2>
     </header>
     <nav>
         <ul>
@@ -36,8 +37,10 @@
   <br>
         </ul>
     </nav>
-    <main>
-        
+    <main><br><br><br><br><br><br>
+      This page is primarily built for mobile <br>
+        devices, but will be adjusted for other <br>
+        screen sizes as that becomes necessary. <br><br><br><br><br><br><br>
     </main>
     <footer>
         <small>Last updated: February 4, 2017</small>
