--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>DanielSouthwick.
-            gitbhub.io</h1>
+            github.io</h1>
         <h2>by Daniel Southwick</h2>
     </header>
     <nav>
