--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             <a href="webpageplan.html">Weather Webpage Plan</a>
     <br>
             <a href="SWMexample2.html">Franklin Weather Page</a>
-  <br>
+  <br><br>
+            <li>Other</li>
+            <a href="Statistical History of MLB 1871-2016.xlsx">Stastical History of MLB</a>
         </ul>
     </nav>
     <main><br><br><br><br><br><br>
