--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a href="SWMexample2.html">Franklin Weather Page</a>
   <br><br>
             <li>Other</li>
-            <a href="Statistical History of MLB 1871-2016.xlsx">Stastical History of MLB</a>
+            <a href="Statistical History of MLB 1871-2016.xlsx">Statistical History of MLB</a>
         </ul>
     </nav>
     <main><br><br><br><br><br><br>
