--- a/SWMexample2.html
+++ b/SWMexample2.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
 <head>
-    <title>Southwick Weather | Mobile</title>
-    <link type="text/css" rel="stylesheet" href="normalize.css">
+    <title>Southwick Weather | Franklin, ID</title>
+    <!--<link type="text/css" rel="stylesheet" href="normalize.css">    -->
     <link type="text/css" rel="stylesheet" href="mystyles2.css">
+    <meta name="viewpoint" content="width=device-width, initial-scale=1">
+    <link href="//fonts.googleapis.com/css?family=Russo One" rel="stylesheet">
+<style>
+#tempblk3 {
+    font-family: 'Russo One';
+}
+</style>
+    <link href="//fonts.googleapis.com/css?family=Armata" rel="stylesheet">
+<style>
+body {
+    font-family: 'Armata';font-size: 22px;
+}
+</style>
 </head>
-
 <body>
     <header>
         <h1>SOUTHWICK - WEATHER</h1>
@@ -39,7 +50,7 @@
             <p id="hf">HOURLY FORECAST</p>
             <p id="hfdate">FEBRUARY 14, 2017</p>
         </div>
-        <div class="scrollmenu">
+        <div class="scrollmenuhf">
             <ul>
                 <li>2&deg;
                     <br>1AM</li>
@@ -96,28 +107,28 @@
             <p id="wfdate">FEBRUARY 11-18, 2017</p>
         </div>
 
-        <div class="scrollmenu">
+        <div class="scrollmenuwf">
             <ul>
-                <li>21&deg; hi
-                    <br>6&deg; lo
+                <li>21&deg; high
+                    <br>6&deg; low
                     <br>MON</li>
-                <li>25&deg; hi
-                    <br>3&deg; lo
+                <li>25&deg; high
+                    <br>3&deg; low
                     <br>TUE</li>
-                <li>32&deg; hi
-                    <br>11&deg; lo
+                <li>32&deg; high
+                    <br>11&deg; low
                     <br>WED</li>
-                <li>34&deg; hi
-                    <br>13&deg; lo
+                <li>34&deg; high
+                    <br>13&deg; low
                     <br>THU</li>
-                <li>30&deg; hi
-                    <br>11&deg; lo
+                <li>30&deg; high
+                    <br>11&deg; low
                     <br>FRI</li>
-                <li>27&deg; hi
-                    <br>10&deg; lo
+                <li>27&deg; high
+                    <br>10&deg; low
                     <br>SAT</li>
-                <li>22&deg; hi
-                    <br>6&deg; lo
+                <li>22&deg; high
+                    <br>6&deg; low
                     <br>SUN</li>
             </ul>
         </div>
@@ -128,5 +139,4 @@
         <a href="#">Settings</a>
     </footer>
 </body>
-
 </html>
