--- a/SWMexample2.html
+++ b/SWMexample2.html
@@ -5,6 +5,7 @@
     <!--<link type="text/css" rel="stylesheet" href="normalize.css">    -->
     <link type="text/css" rel="stylesheet" href="mystyles2.css">
     <meta name="viewpoint" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="SW.png">
     <link href="//fonts.googleapis.com/css?family=Russo One" rel="stylesheet">
 <style>
 #tempblk3 {
