--- a/SWMexample2.html
+++ b/SWMexample2.html
@@ -5,17 +5,17 @@
     <!--<link type="text/css" rel="stylesheet" href="normalize.css">    -->
     <link type="text/css" rel="stylesheet" href="mystyles2.css">
     <meta name="viewpoint" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="SW.png">
+    <link rel="icon" href="SW2.png">
     <link href="//fonts.googleapis.com/css?family=Russo One" rel="stylesheet">
 <style>
 #tempblk3 {
-    font-family: 'Russo One';
+    font-family: "Russo One";
 }
 </style>
     <link href="//fonts.googleapis.com/css?family=Armata" rel="stylesheet">
 <style>
 body {
-    font-family: 'Armata';font-size: 22px;
+    font-family: "Armata";font-size: 22px;
 }
 </style>
 </head>
