--- a/SWMexample2.html
+++ b/SWMexample2.html
@@ -135,9 +135,10 @@ body {
         </div>
     </main>
     <footer>
-        <a href="Small%20Screen.PNG">Mobile Site Plan</a>
+        <a href="Small%20Screen.PNG">Mobile Plan</a>
+        <a href="Medium Screen.PNG">Tablet Plan</a>
+        <a href="Large%20Screen.PNG">Desktop Plan</a>
         <a href="index.html">Home</a>
-        <a href="#">Settings</a>
     </footer>
 </body>
 </html>
