--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 
@@ -17,28 +16,15 @@
     </header>
     <nav>
         <ul>
-  
-            <li>CIT-160</li>
-            <a href="CelsToFahr.html">Celsius Converter</a>
-    <br>
-            <a href="CelsToFahrOnly.html">Celsius Converter2</a>
-    <br>
-            <a href="M to Cm.html">Meters to Centimeters Converter</a>
-    <br>
-            <a href="odo to mpg.html">MPG Calculator</a>
-    <br>
-            <a href="AppliedScipture.html">Applied Scripture</a>
-    <br>
-    <br>
             
             <li>CIT-230</li>
             <a href="webpageplan.html">Weather Webpage Plan</a>
     <br>
             <a href="FranklinWeather.html">Franklin Weather Page</a>
   <br>
-            <a href="GreenvilleWeather.html">Franklin Weather Page</a>
+            <a href="GreenvilleWeather.html">Greenville Weather Page</a>
   <br>
-            <a href="SpringfieldWeather.html">Franklin Weather Page</a>
+            <a href="SpringfieldWeather.html">Springfield Weather Page</a>
   <br>
         </ul>
     </nav>
@@ -48,62 +34,8 @@
         screen sizes as that becomes necessary. <br><br><br><br><br><br><br>
     </main>
     <footer>
-        <small>Last updated: February 4, 2017</small>
+        <small>Last updated: February 18, 2017</small>
     </footer>
 </body>
 
 </html>
-=======
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <title>Home Page</title>
-    <meta name="viewpoint" content="width=device-width">
-    <link type="text/css" rel="stylesheet" href="normalize.css">
-    <link type="text/css" rel="stylesheet" href="mystyles.css">
-</head>
-
-<body>
-    <header>
-        <h1>DanielSouthwick.
-            github.io</h1>
-        <h2>by Daniel Southwick</h2>
-    </header>
-    <nav>
-        <ul>
-  
-            <li>CIT-160</li>
-            <a href="CelsToFahr.html">Celsius Converter</a>
-    <br>
-            <a href="CelsToFahrOnly.html">Celsius Converter2</a>
-    <br>
-            <a href="M to Cm.html">Meters to Centimeters Converter</a>
-    <br>
-            <a href="odo to mpg.html">MPG Calculator</a>
-    <br>
-            <a href="AppliedScipture.html">Applied Scripture</a>
-    <br>
-    <br>
-            
-            <li>CIT-230</li>
-            <a href="webpageplan.html">Weather Webpage Plan</a>
-    <br>
-            <a href="SWMexample2.html">Franklin Weather Page</a>
-  <br><br>
-            <li>Other</li>
-            <a href="Statistical History of MLB 1871-2016.xlsx">Statistical History of MLB</a>
-        </ul>
-    </nav>
-    <main><br><br><br><br><br><br>
-      This page is primarily built for mobile <br>
-        devices, but will be adjusted for other <br>
-        screen sizes as that becomes necessary. <br><br><br><br><br><br><br>
-    </main>
-    <footer>
-        <small>Last updated: February 4, 2017</small>
-    </footer>
-</body>
-
-</html>
->>>>>>> origin/master
