--- a/GreenvilleWeather.html
+++ b/GreenvilleWeather.html
@@ -21,7 +21,7 @@ body {
 </head>
 <body>
     <header>
-        <h1>SOUTHWICK - WEATHER</h1>
+        <h1>GREENVILLE, ID - WEATHER</h1>
     </header>
     <nav>
         <a href="FranklinWeather.html">Franklin</a>
