--- a/FranklinWeather.html
+++ b/FranklinWeather.html
@@ -20,15 +20,16 @@ body {
 </style>
 </head>
 <body>
+    
     <header>
-        <h1>FRANKLIN, ID - WEATHER</h1>
+        <h1>FRANKLIN, IDAHO</h1>
     </header>
     <nav>
         <a href="FranklinWeather.html">Franklin</a>
         <a href="GreenvilleWeather.html">Greenville</a>
         <a href="SpringfieldWeather.html">Springfield</a>
     </nav>
-    <div id="tempblk1">
+        <div id="tempblk1">
         <ul>
             <li>4:45pm</li>
             <li>Franklin, ID</li>
