--- a/SpringfieldWeather.html
+++ b/SpringfieldWeather.html
@@ -21,7 +21,7 @@ body {
 </head>
 <body>
     <header>
-        <h1>SPRINGFIELD, ID - WEATHER</h1>
+        <h1>SPRINGFIELD, IDAHO</h1>
     </header>
     <nav>
         <a href="FranklinWeather.html">Franklin</a>
