--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
             
             <li>CIT-230</li>
             <a href="webpageplan.html">Weather Webpage Plan</a>
+       <br>
+            <a href="PresentationSite.html">In Class Presentation</a>
     <br>
             <a href="FranklinWeather.html">Franklin Weather Page</a>
   <br>
             <a href="GreenvilleWeather.html">Greenville Weather Page</a>
-  <br>
+    <br>
             <a href="SpringfieldWeather.html">Springfield Weather Page</a>
-  <br>
+       <br>
         </ul>
     </nav>
     <main><br><br><br><br><br><br>
