--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <br>
             <a href="SpringfieldWeather.html">Springfield Weather Page</a>
        <br>
+            <a href="index2.html">Responsive Media Assignment Page</a>
         </ul>
     </nav>
     <main><br><br><br><br><br><br>
